--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
 
 <ion-list lines="full">
     <ion-item *ngFor="let pet of listData; let i = index">
-      <a ion-item (click)="openModal(i)">
+      <a ion-item (click)="openModal(pet.name)">
         {{pet.name}} <br>
         Born: {{pet.hatchDate}}
       </a>
