--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="My Pets" tabIcon="egg"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contacts" tabIcon="people"></ion-tab>
+  <!-- <ion-tab [root]="tab3Root" tabTitle="Contacts" tabIcon="people"></ion-tab> -->
 </ion-tabs>
